fixed margin collapse

--- a/styles/sass/_general.scss
+++ b/styles/sass/_general.scss
@@ -51,3 +51,7 @@ button {
         transform: translate(0px, 5px);
     }
 }
+
+.hidden {
+    display: none;
+}
