--- a/styles/sass/_main.scss
+++ b/styles/sass/_main.scss
@@ -9,7 +9,7 @@ header,
 .about__section {
     display: inline-block;
     margin: 1px 0;
-    min-height: 667px;
+    min-height: 850px;
 }
 
 .project__directory {
@@ -176,6 +176,7 @@ header,
         border-bottom: 1px solid $darkPurple;
     }
     .project__whatdo--content {
+        padding: 40px 0;
         height: 100%;
         display: flex;
         flex-wrap: wrap;
@@ -215,13 +216,12 @@ header,
         font-size: $lightSerif;
         }
         .project__tool__list {
-            padding: 25% 40px 40px 40px;
+            padding: 40px 0;
             width: 100%;
         }
         .project__whatdo--sect--one--box {
             display: flex;
             flex-direction: column;
-            padding: 40px;
             width: 100%;
             height: 100%;
             justify-content: space-between;
@@ -244,12 +244,12 @@ header,
 
 
     .project__whatdo--sect--two {
-        padding: 80px 40px 40px 40px;
+        padding: 80px 40px 0 40px;
         width: 50%;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        height: 90vh;
+        height: 100%;
         .project__whatdo--sect--two--box {
             display: flex;
             flex-direction: column;
