--- a/styles/sass/_queries.scss
+++ b/styles/sass/_queries.scss
@@ -2,6 +2,7 @@
     .project__airhead, .project__whatdo, .project__delicious {
         min-width: 800px;
         height: auto;
+        min-height: 667px;
     }
     section{
         height: auto;
