--- a/styles/style.css
+++ b/styles/style.css
@@ -275,6 +275,10 @@ button:focus {
           transform: translate(0px, 5px);
 }
 
+.hidden {
+  display: none;
+}
+
 .header__wrap {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -430,7 +434,7 @@ header,
 .about__section {
   display: inline-block;
   margin: 1px 0;
-  min-height: 667px;
+  min-height: 850px;
 }
 
 .project__directory {
@@ -645,6 +649,7 @@ header,
 }
 
 .project__whatdo .project__whatdo--content {
+  padding: 40px 0;
   height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -703,7 +708,7 @@ header,
 }
 
 .project__whatdo .project__whatdo--sect--one .project__tool__list {
-  padding: 25% 40px 40px 40px;
+  padding: 40px 0;
   width: 100%;
 }
 
@@ -715,7 +720,6 @@ header,
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  padding: 40px;
   width: 100%;
   height: 100%;
   -webkit-box-pack: justify;
@@ -740,7 +744,7 @@ header,
 }
 
 .project__whatdo .project__whatdo--sect--two {
-  padding: 80px 40px 40px 40px;
+  padding: 80px 40px 0 40px;
   width: 50%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -752,7 +756,7 @@ header,
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  height: 90vh;
+  height: 100%;
 }
 
 .project__whatdo .project__whatdo--sect--two .project__whatdo--sect--two--box {
@@ -1149,6 +1153,7 @@ footer p {
   .project__airhead, .project__whatdo, .project__delicious {
     min-width: 800px;
     height: auto;
+    min-height: 667px;
   }
   section {
     height: auto;
